<resources>
<string name="app_name">lab3_2</string>
<string name="to_first">to first</string>
<string name="to_second">to second</string>
<string name="to_third">to third</string>
<string name="thisisact1">Activity 1</string>
<string name="thisisact2">Activity 2</string>
<string name="thisisact3">Activity 3</string>
<string name="about">About</string>
</resources>
