<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thisisact1"
        android:textAlignment="center"
         />
    <Button
        android:id="@+id/button"
        style="@style/buttonStyle"
        android:text="@string/to_second" />

</LinearLayout>